@@ -18,7 +18,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 # 02111-1307 USA.
 
-# Test distutils arch package + extra package w/ pycentral
+# Test distutils arch package + extra package + tarball w/ pysupport
 
 . testsuite_functions
 
@@ -27,9 +27,11 @@ setup_workdir
 
 cat <<EOF >$WORKDIR/debian/rules
 #!/usr/bin/make -f
-DEB_PYTHON_SYSTEM = pycentral
+DEB_TAR_SRCDIR=distutils-test-0.1
+DEB_PYTHON_SYSTEM = pysupport
 DEB_PYTHON_MODULE_PACKAGE = python-cdbs-testsuite
 include debian/testsuite.mk
+include \$(_cdbs_package_root_dir)/1/rules/tarball.mk.in
 include \$(_cdbs_package_root_dir)/1/rules/debhelper.mk.in
 include \$(_cdbs_package_root_dir)/1/class/python-distutils.mk.in
 DEB_PYTHON_DESTDIR = \$(CURDIR)/debian/\$(cdbs_curpkg)
@@ -45,17 +47,13 @@ Description: common build system test suite
  managed to install this, something has gone horribly wrong.
 EOF
 
-cp -R distutils/* $WORKDIR
-sed -i 's/^#EXT#/     /g' $WORKDIR/setup.py
-touch $WORKDIR/foo.c
+# Make sure tarball is in place for this test.
+test_tarballs
+cp tarballs/distutils-test-0.1.tar.gz $WORKDIR
 
 build_package
 
-dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_*.deb | grep -F -q /usr/lib/python2.5/site-packages/testing/foo.py || return_fail
-dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_*.deb | grep -F -q /usr/lib/python2.4/site-packages/testing/foo.py || return_fail
-
-clean_package
-test -d $WORKDIR/build && return_fail
+dpkg -c $WORKDIR/../python-cdbs-testsuite_0.1_*.deb | grep -F -q /usr/share/python-support/python-cdbs-testsuite/testing/foo.py || return_fail
 
 clean_workdir
 return_pass
